// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Experience renders correctly with a single item and no tags 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c6 {
  display: none;
}

.c7 {
  background: var(--color-background);
  border: none;
  border-radius: 999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
  color: var(--color-headline);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c7:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c8 {
  background: transparent;
  border: none;
  border-radius: 999px;
  box-shadow: none;
  color: var(--color-paragraph);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c0 {
  padding: 3rem 0;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c9 {
  display: flex;
  flex-direction: column;
  gap: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c10 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 2rem 0;
}

.c10:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c11 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c12 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c13 {
  margin: 0 0 0.625rem;
}

.c14 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 899.98px) {
  html[data-mobile-view="story"] .c6 {
    background: rgba(128, 128, 128, 0.12);
    border-radius: 999px;
    display: flex;
    margin: 0 0 1.5rem;
    padding: 0.25rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: none!important;
  }
}

@media (max-width: 1199px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c10 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <div
        aria-label="Story sections"
        class="c6"
        role="tablist"
      >
        <button
          aria-controls="journey"
          aria-selected="true"
          class="c7"
          data-story-segment="journey"
          role="tab"
          tabindex="0"
        >
          Journey
        </button>
        <button
          aria-controls="experience"
          aria-selected="false"
          class="c8"
          data-story-segment="experience"
          role="tab"
          tabindex="-1"
        >
          Experience
        </button>
      </div>
      <ol
        class="c9"
      >
        <li
          class="c10"
        >
          <div
            class=""
          >
            <p
              class="c2 c11"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c12"
            >
              JIBE eCommerce
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c13"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c14"
            >
              Leading frontend development for headless Shopify storefronts.
            </p>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;

exports[`Experience renders correctly with all items 1`] = `
.c1 {
  display: grid;
  min-height: auto;
  position: relative;
  width: 100%;
  column-gap: calc(24px);
  grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
}

.c1 >* {
  grid-column: 2/auto;
}

.c16 {
  display: flex;
  gap: 0.5rem;
  flex-wrap: wrap;
}

.c4 {
  color: var(--color-headline);
  font-family: var(--font-space-grotesk),sans-serif;
  font-weight: 700;
  font-size: 2rem;
  line-height: 1.1;
}

.c2 {
  color: var(--color-paragraph);
  font-size: 1rem;
  line-height: 1.5;
  margin: 0;
  padding: 0;
}

.c17 {
  -webkit-tap-highlight-color: transparent;
  background: var(--color-badge-bg);
  border: 1px solid var(--color-highlight);
  border-radius: 9999px;
  color: var(--color-paragraph);
  cursor: default;
  display: inline-block;
  user-select: none;
  font-size: 0.75rem;
  padding: 0.25rem 0.5rem;
}

.c3 {
  color: var(--color-highlight);
  font-size: 0.75rem;
  font-weight: 600;
  letter-spacing: 0.2em;
  margin: 0 0 1.25rem;
  text-transform: uppercase;
}

.c6 {
  display: none;
}

.c7 {
  background: var(--color-background);
  border: none;
  border-radius: 999px;
  box-shadow: 0 1px 4px rgba(0, 0, 0, 0.12);
  color: var(--color-headline);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c7:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c8 {
  background: transparent;
  border: none;
  border-radius: 999px;
  box-shadow: none;
  color: var(--color-paragraph);
  cursor: pointer;
  flex: 1;
  font-family: inherit;
  font-size: 0.875rem;
  font-weight: 600;
  min-height: 44px;
  transition: background 0.2s ease,color 0.2s ease;
}

.c8:focus-visible {
  outline: 2px solid var(--color-highlight);
  outline-offset: -2px;
}

.c0 {
  padding: 3rem 0;
}

.c5 {
  margin: 0 0 3rem;
  max-width: 600px;
}

.c9 {
  display: flex;
  flex-direction: column;
  gap: 0;
  list-style: none;
  margin: 0;
  padding: 0;
}

.c10 {
  border-top: 1px solid var(--color-main);
  display: grid;
  gap: 1rem;
  grid-template-columns: 1fr;
  padding: 2rem 0;
}

.c10:last-child {
  border-bottom: 1px solid var(--color-main);
}

.c11 {
  font-size: 0.75rem;
  margin: 0 0 0.25rem;
}

.c12 {
  font-size: 0.875rem;
  font-weight: 700;
  margin: 0 0 0.125rem;
}

.c13 {
  color: var(--color-secondary);
  font-size: 0.75rem;
  margin: 0;
}

.c14 {
  margin: 0 0 0.625rem;
}

.c15 {
  font-size: 0.875rem;
  line-height: 1.6;
  margin: 0 0 1rem;
}

@media (min-width: 600px) {
  .c1 {
    column-gap: calc(24px);
    grid-template-columns: 1fr min(1440px, 100% - 48px) 1fr;
  }
}

@media (min-width: 900px) {
  .c1 {
    column-gap: calc(36px);
    grid-template-columns: 1fr min(1440px, 100% - 72px) 1fr;
  }
}

@media (min-width: 1200px) {
  .c1 {
    column-gap: calc(81px);
    grid-template-columns: 1fr min(1440px, 100% - 162px) 1fr;
  }
}

@media (min-width: 1536px) {
  .c1 {
    column-gap: calc(121.5px);
    grid-template-columns: 1fr min(1440px, 100% - 243px) 1fr;
  }
}

@media (min-width: 600px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1200px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 1536px) {
  .c1 >* {
    grid-column: 2/auto;
  }
}

@media (min-width: 900px) {
  .c4 {
    font-size: 2.5rem;
  }
}

@media (min-width: 1200px) {
  .c4 {
    font-size: 3.5rem;
  }
}

@media (max-width: 899.98px) {
  html[data-mobile-view="story"] .c6 {
    background: rgba(128, 128, 128, 0.12);
    border-radius: 999px;
    display: flex;
    margin: 0 0 1.5rem;
    padding: 0.25rem;
  }
}

@media (min-width: 900px) {
  .c6 {
    display: none!important;
  }
}

@media (max-width: 1199px) {
  .c0 {
    padding-bottom: 2rem;
    padding-top: 2rem;
  }
}

@media (max-width: 1199px) {
  .c5 {
    margin-bottom: 1.5rem;
  }
}

@media (min-width: 900px) {
  .c10 {
    gap: 2rem;
    grid-template-columns: 200px 1fr;
  }
}

<div>
  <section
    class="c0"
    id="experience"
  >
    <section
      class="c1"
    >
      <p
        class="c2 c3"
      >
        Experience
      </p>
      <h2
        class="c4 c5"
      >
        Where I've worked
      </h2>
      <div
        aria-label="Story sections"
        class="c6"
        role="tablist"
      >
        <button
          aria-controls="journey"
          aria-selected="true"
          class="c7"
          data-story-segment="journey"
          role="tab"
          tabindex="0"
        >
          Journey
        </button>
        <button
          aria-controls="experience"
          aria-selected="false"
          class="c8"
          data-story-segment="experience"
          role="tab"
          tabindex="-1"
        >
          Experience
        </button>
      </div>
      <ol
        class="c9"
      >
        <li
          class="c10"
        >
          <div
            class=""
          >
            <p
              class="c2 c11"
            >
              May 2022 — Present
            </p>
            <p
              class="c2 c12"
            >
              JIBE eCommerce
            </p>
            <p
              class="c2 c13"
            >
              Remote · Vancouver, CA
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c14"
            >
              Senior Frontend Developer
            </h3>
            <p
              class="c2 c15"
            >
              Building and maintaining headless Shopify storefronts on Next.js/TypeScript for brands including 7mesh, Nest Designs and Saul Good. Core contributor and maintainer of Compass, the agency's internal design system powering all client storefronts. Tech lead on selected projects and epics — technical direction, code reviews, and mentoring.
            </p>
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                Next.js
              </span>
              <span
                class="c17"
              >
                TypeScript
              </span>
              <span
                class="c17"
              >
                Shopify
              </span>
              <span
                class="c17"
              >
                Storybook
              </span>
              <span
                class="c17"
              >
                styled-components
              </span>
            </div>
          </div>
        </li>
        <li
          class="c10"
        >
          <div
            class=""
          >
            <p
              class="c2 c11"
            >
              Mar 2020 — Apr 2022
            </p>
            <p
              class="c2 c12"
            >
              Overstappen.nl
            </p>
            <p
              class="c2 c13"
            >
              Hybrid · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c14"
            >
              Senior Frontend Developer → Architect
            </h3>
            <p
              class="c2 c15"
            >
              Frontend developer on the Netherlands' main price comparison platform — built the energy comparison product, led the health insurance tool, and architected Kizi.nl, a new consumer brand, alongside the CTO. Promoted to define tech stacks, coding standards, and CI/CD pipelines across the development team.
            </p>
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                Next.js
              </span>
              <span
                class="c17"
              >
                TypeScript
              </span>
              <span
                class="c17"
              >
                Redux
              </span>
              <span
                class="c17"
              >
                Storybook
              </span>
              <span
                class="c17"
              >
                Jest
              </span>
              <span
                class="c17"
              >
                Azure DevOps
              </span>
            </div>
          </div>
        </li>
        <li
          class="c10"
        >
          <div
            class=""
          >
            <p
              class="c2 c11"
            >
              Jan 2019 — Feb 2020
            </p>
            <p
              class="c2 c12"
            >
              TWC / The Widget Company
            </p>
            <p
              class="c2 c13"
            >
              On-site · Amsterdam, NL
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c14"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c15"
            >
              Built Smart TV streaming applications for media companies — most notably Videoland, RTL Nederland's VOD service — deployed across Samsung, LG, Philips, Sony, Panasonic and PlayStation platforms.
            </p>
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                Vue.js
              </span>
              <span
                class="c17"
              >
                TypeScript
              </span>
              <span
                class="c17"
              >
                Vuex
              </span>
              <span
                class="c17"
              >
                Jest
              </span>
              <span
                class="c17"
              >
                Webpack
              </span>
            </div>
          </div>
        </li>
        <li
          class="c10"
        >
          <div
            class=""
          >
            <p
              class="c2 c11"
            >
              Mar 2015 — Dec 2018
            </p>
            <p
              class="c2 c12"
            >
              Consoft Sistemi (now ALTEN Italia)
            </p>
            <p
              class="c2 c13"
            >
              On-site · Turin, IT
            </p>
          </div>
          <div
            class=""
          >
            <h3
              class="c14"
            >
              Frontend Developer
            </h3>
            <p
              class="c2 c15"
            >
              Built and maintained FCA Group's Build & Price vehicle configurators for NAFTA and EMEA brand sites — Jeep, Ram, Dodge, Fiat, Alfa Romeo — and led frontend development of the Mopar accessories configurator. Nearly three years of ownership on high-traffic consumer tools.
            </p>
            <div
              class="c16"
            >
              <span
                class="c17"
              >
                React
              </span>
              <span
                class="c17"
              >
                Redux
              </span>
              <span
                class="c17"
              >
                JavaScript
              </span>
              <span
                class="c17"
              >
                Webpack
              </span>
              <span
                class="c17"
              >
                Node.js
              </span>
            </div>
          </div>
        </li>
      </ol>
    </section>
  </section>
</div>
`;
